--- a/src/components/routes/home/page/home-page.scss
+++ b/src/components/routes/home/page/home-page.scss
@@ -1,5 +1,12 @@
+@import 'src/assets/styles/base/variables';
+
 .home-page {
   max-width: 800px;
   padding: 8% 10px 0 10px;
   margin: 0 auto;
+
+  @media (max-width: $tablet) {
+    padding-top: 4%;
+    padding-bottom: 2%;
+  }
 }
