--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -9,4 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  background: rgba(0,0,0,.1);
+  z-index: 10;
 }
