--- a/src/components/common/app-notification/notification.scss
+++ b/src/components/common/app-notification/notification.scss
@@ -1,18 +1,17 @@
-$white-color: #ffffff;
-$primary: #124A59;
-$link: #3273dc;
-$info: #209cee;
-$success: #23d160;
-$warning: #ffdd57;
-$danger: #00ACC2;
+$primary: white;
+$info: #95a5a6;
+$success: #27ae60;
+$warning: #f1c40f;
+$danger: #c0392b;
 
 .notification {
   width: 300px;
   background-color: whitesmoke;
   border-radius: 3px;
   padding: 20px;
-  color: white;
+  color: black;
   margin-bottom: 10px;
+  white-space: pre-wrap;
 
   &--primary {
     background-color: $primary;
@@ -24,58 +23,16 @@ $danger: #00ACC2;
 
   &--success {
     background-color: $success;
+    color: white;
   }
 
   &--warning {
     background-color: $warning;
+    color: rgba(0,0,0,.7);
   }
 
   &--danger {
     background-color: $danger;
-  }
-
-  &__close {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    flex-grow: 0;
-    flex-shrink: 0;
-    background-color: rgba(10, 10, 10, 0.2);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 0;
-    outline: none;
-    vertical-align: top;
-
-    &:hover {
-      background-color: rgba(10, 10, 10, 0.4);
-    }
-
-    &:before {
-      height: 2px;
-      width: 50%;
-    }
-
-    &:after {
-      height: 50%;
-      width: 2px;
-    }
-
-    &:before,
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      background-color: white;
-      transform: translateX(-50%) translateY(-50%) rotate(45deg);
-      transform-origin: center center;
-    }
-
+    color: rgba(0,0,0,.7);
   }
 }
